vm-minikube-apps/webserver/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: webserver
  name: webserver
spec:
  type: ClusterIP
  selector:
    app: webserver
  ports:
    - name: webserver-port
      port: 8080
      targetPort: 8080
